# Knozify-Backend

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
knozify/account/: admin.py  apps.py  models.py  sms-sender.js  throttles.py  urls.py
knozify/account/api/: urls.py
knozify/account/api/v1/: otp.py  serializers.py  urls.py  user_name_gen.py  views.py
knozify/account/api/v1/docs/: login_support.md  otp.md  user_name_gen.md
knozify/account/api/v1/serializers/: __init__.py  get_all_userdetails_ser.py  google_auth_serializer.py  registration_serializer.py  user_name_serializer.py
knozify/account/api/v1/utils/: __init__.py  login_support.py  otp.py  user_name_gen.py
knozify/account/api/v1/views/: __init__.py  _base.py  first_api.py  get_all_user_data.py  google_auth.py  login.py  otp_apis.py  phone_no_register.py  register.py  user_name_apis.py
knozify/account/migrations/: 0001_initial.py  0002_user_contact.py
knozify/core/: asgi.py  urls.py  wsgi.py
knozify/core/settings/: __init__.py  base.py  databases.py  drf_conf.py  logging.py  redis.py  sentry.py  simple_jwt.py  social_auths.py
knozify/templates/: 404.html  index.html
knozify/utils/: exceptions.py  global_exception.py  throttle_exception.py
